--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "passport-local": "^1.0.0",
     "promise-mysql": "^3.2.1",
     "pug": "^2.0.0-beta6",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
     "serve-favicon": "^2.3.0"
   }
 }
